# medforge-phi-generator

./: .gitignore  CLAUDE.md  DEMO.md  NESTED_EMAIL_REQUIREMENTS.md  PROJECT_STATUS.md  README.md  lint.sh  medforge  pyproject.toml  reorganize_existing.py
.claude/: settings.local.json
config/: example.yaml
cust_templates/: 2024-USDC-assessment-infra-diagram-CUI-Critical Infrastructure-positive.xml  2025 PQCRA Rules of Behavior - MAC NAME-CUI-Critical Infrastructure-negative.docx  2025 PQCRA Rules of Behavior - MAC NAME-CUI-Critical Infrastructure-positive.docx  Additional Information OIT FO form-CUI-Budget-negative.docx  Additional Information OIT FO-Mock AFR-CUI-Budget-positive.docx  DIBO AFR -AMI-CUI-Budget-Positive.docx  DIBO AFR Guidance-template-CUI-Budget-Negative.docx  IaaS Mainframe MFA IGCE OY1-CUI-Procurement and Acquisition-positive.xlsx  KMP-MockSystem-CUI-Critical Infrastructure-Positive.docx  KMPTemplate-CUI-Critical Infrastructure-negative.docx  OIT FO - AIF-CUI-Budget-negative.docx  Supplemental AFR Information-MockProject-CUI-Budget-Positive.docx  Supplemental AFR Information-template-CUI-Budget-negative.docx  Supplemental AFR-CUI-Budget-negative.docx  Ticket #REQ0307095 has been opened-CUI-Critical Infrastructure-negative.eml  [cms-bb3] BugCrowd email-CUI-Critical Infrastructure-positive.eml  [cms-vdp] BugCrowd email-CUI-Critical Infrastructure-positive.eml  [snyk] Vulnerability alert for the ZTMF Scoring organization-CUI-Critical Infrastructure-Positive.eml  [snyk] ZTMF Scoring's weekly report-CUI-Critical Infrastructure-Positive.eml  (+3 more)
src/: cli.py
(+1977 files in other folders)
